# rfid_llrp

./: CMakeLists.txt  package.xml
include/rfid_llrp/: llrp_encoder.hpp  llrp_framing.hpp  llrp_status.hpp  llrp_types.hpp  tcp_client.hpp
msg/: TagObservation.msg
src/: get_caps_test.cpp  llrp_encoder.cpp  llrp_framing.cpp  llrp_status.cpp  tcp_client.cpp  tcp_test.cpp
